--- a/test.html
+++ b/test.html
@@ -5,19 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <!-- <script src="app.js"></script> -->
 </head>
 <body>
   <header>
-    <h1>漢字 Conversion</h1>
+    <h1>火</h1>
   </header>
   <aside>
-    メアリーの日常
-    <a ref="#">12/01/2021</a>
+    <p>日本語が上手ですね</p>
+    <p>12/01/2021</p>
   </aside>
   <section>
-    <h2>今日はめっちゃ暑いですね！</h2>
-    <p>美味しいな寿司</p>
+    <h2>火は英語で「ファイアー」です</h2>
+    <p>I can't speak Japanese ;(</p>
+    <p>今日は豚骨ラーメンを食べた。美味しかった。</p>
   </section>
 </body>
 </html>
