skeleton for furiganising HTML documents

--- a/test.html
+++ b/test.html
@@ -4,20 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="contentScript.js" defer></script>
   <title>Document</title>
 </head>
 <body>
   <header>
     <h1>火</h1>
   </header>
-  <aside>
-    <p>日本語が上手ですね</p>
+  <!-- <aside>
+    <p>
+      <ruby>
+        日本語 <rp>(</rp><rt>にほんご</rt><rp>)</rp>
+      </ruby>
+      が
+      <ruby>
+        上手 <rp>(</rp><rt>じょうず</rt><rp>)</rp>
+      </ruby>
+      ですね
+    </p>
     <p>12/01/2021</p>
-  </aside>
+  </aside> -->
   <section>
     <h2>火は英語で「ファイアー」です</h2>
-    <p>I can't speak Japanese ;(</p>
-    <p>今日は豚骨ラーメンを食べた。美味しかった。</p>
+    <div>
+      <p>I can't speak Japanese ;(</p>
+      <p>今日は豚骨ラーメンを食べた。美味しかった。</p>
+    </div>
   </section>
 </body>
 </html>
